--- a/app/views/eventitems/show.html.haml
+++ b/app/views/eventitems/show.html.haml
@@ -12,6 +12,9 @@
 %p
   %b Content:
   = @eventitem.content
+%p
+  %b Author:
+  = @eventitem.committee.position
 
 = link_to 'Edit', edit_eventitem_path(@eventitem)
 \|
