--- a/app/views/newsitems/_form.html.haml
+++ b/app/views/newsitems/_form.html.haml
@@ -15,5 +15,8 @@
   .field
     = f.label :content
     = f.text_area :content
+  .field
+    Author
+    = f.collection_select :committee_id, Committee.all, :id, :position
   .actions
     = f.submit 'Save'
