--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>OEMS</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
-</html>
+!!!
+%html{lang: "en-GB"}
+  %head
+    %title The Old Etonian Medical Society
+    = stylesheet_link_tag    "application", "bootstrap.min", "bootstrap-responsive.min", "shadowbox", :media => "all"
+  %body
+    .container-fluid
+      .navbar
+        .navbar-inner
+          .container
+            %a.brand{href: "./"} Home
+            %ul.nav.pull-left
+              %li.divider-vertical
+              %li
+                %a{href: "./about"} About
+              %li.divider-vertical
+              %li
+                %a{href: "./news"} News
+              %li.divider-vertical
+              %li
+                %a{href: "./events"} Events
+              %li.divider-vertical
+              %li
+                %a{href: "./committeelist"} Committee
+            %ul.nav.pull-right
+              %li
+                %a{href: "./contact", rel: "shadowbox;width=400;height=380"} Contact
+              %li.divider-vertical
+              %li
+                %a{href: "http://tripartite.oems.org.uk"} Members' Database
+      = yield
+  = javascript_include_tag "application", "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js", "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js", "shadowbox"
+  :javascript
+    Shadowbox.init();
