--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,26 +8,26 @@
       .navbar
         .navbar-inner
           .container
-            %a.brand{href: "./"} Home
+            %a.brand{href: "/"} Home
             %ul.nav.pull-left
               %li.divider-vertical
               %li
-                %a{href: "./about"} About
+                %a{href: "/about"} About
               %li.divider-vertical
               %li
-                %a{href: "./news"} News
+                %a{href: "/newsitems/newslist"} News
               %li.divider-vertical
               %li
-                %a{href: "./events"} Events
+                %a{href: "/eventitems/eventlist"} Events
               %li.divider-vertical
               %li
-                %a{href: "./committeelist"} Committee
+                %a{href: "/committees/committeelist"} Committee
             %ul.nav.pull-right
               %li
-                %a{href: "./contact", rel: "shadowbox;width=400;height=380"} Contact
+                %a{href: "/contact", rel: "shadowbox;width=400;height=380"} Contact
               %li.divider-vertical
               %li
-                %a{href: "http://tripartite.oems.org.uk"} Members' Database
+                %a{href: "/members"} Members' Database
       = yield
   = javascript_include_tag "application", "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js", "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js", "shadowbox"
   :javascript
