Reverted to earlier view

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,13 +15,13 @@
                 %a{href: "/about"} About
               %li.divider-vertical
               %li
-                %a{href: "/newsitems/newslist"} News
+                %a{href: "/newsitems"} News
               %li.divider-vertical
               %li
-                %a{href: "/eventitems/eventlist"} Events
+                %a{href: "/eventitems"} Events
               %li.divider-vertical
               %li
-                %a{href: "/committees/committeelist"} Committee
+                %a{href: "/committees"} Committee
             %ul.nav.pull-right
               %li
                 %a{href: "/contact", rel: "shadowbox;width=400;height=380"} Contact
