--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,8 @@
               %li
                 %a{href: "/members"} Members' Database
       = yield
+      %p.notice= notice
+      %p.alert= alert
   = javascript_include_tag "application", "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js", "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js", "shadowbox"
   :javascript
     Shadowbox.init();
