--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,13 +15,13 @@
                 %a{href: "/about"} About
               %li.divider-vertical
               %li
-                %a{href: "/newsitems"} News
+                %a{href: "/news"} News
               %li.divider-vertical
               %li
-                %a{href: "/eventitems"} Events
+                %a{href: "/events"} Events
               %li.divider-vertical
               %li
-                %a{href: "/committees"} Committee
+                %a{href: "/committee"} Committee
             %ul.nav.pull-right
               %li
                 %a{href: "/contact", rel: "shadowbox;width=400;height=380"} Contact
