--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,4 +2,5 @@
   %h1 The Old Etonian Medical Society
   %h2 OEMS
 .container-fluid
+  = image_tag("OEMS.png", :align=> "middle")
   %p The Old Etonian Medical Society (OEMS) etc etc
