--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{lang: "en-GB"}
   %head
     %title The Old Etonian Medical Society
-    = stylesheet_link_tag    "application", "bootstrap.min", "bootstrap-responsive.min", "shadowbox", :media => "all"
+    = stylesheet_link_tag    "application"
   %body
     .container-fluid
       .navbar
