--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{lang: "en-GB"}
   %head
     %title The Old Etonian Medical Society
-    = stylesheet_link_tag    "application"
+    = stylesheet_link_tag "application"
   %body
     .container-fluid
       .navbar
@@ -29,6 +29,6 @@
               %li
                 %a{href: "/members"} Members' Database
       = yield
-  = javascript_include_tag "application", "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js", "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js", "shadowbox"
+  = javascript_include_tag "application"
   :javascript
     Shadowbox.init();
