--- a/app/views/home/news.html.haml
+++ b/app/views/home/news.html.haml
@@ -1,8 +1,9 @@
 %h1 Latest News
 
 - @newsitems.each do |newsitem|
-  .span2
-    %p= newsitem.date
-    %p= newsitem.title
-    %p= newsitem.content
-    %p= newsitem.committee.position 
+  .row-fluid
+    .span10.offset1
+      %h3= newsitem.title
+      %h5= newsitem.date.to_s :oems_standard
+      %p= newsitem.content
+      %h6 Author: #{[newsitem.committee.title, newsitem.committee.firstname, newsitem.committee.surname, newsitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
