--- a/app/views/home/events.html.haml
+++ b/app/views/home/events.html.haml
@@ -1,9 +1,10 @@
 %h1 Events
 
 - @eventitems.each do |eventitem|
-  .span2
-    %p= eventitem.date
-    %p= eventitem.venue
-    %p= eventitem.title
-    %p= eventitem.content
-    %p= eventitem.committee.position
+  .row-fluid
+    .span10.offset1
+      %h3= eventitem.title
+      %h4 Venue: #{eventitem.venue}
+      %h5= eventitem.date.to_s :oems_standard
+      %p= eventitem.content
+      %h6 Author: #{[eventitem.committee.title, eventitem.committee.firstname, eventitem.committee.surname, eventitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
