--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,7 +17,7 @@
           = link_to 'Committee', home_committee_path
       %ul.nav.pull-right
         %li
-          %a{href: "/contact", rel: "shadowbox;width=400;height=380"} Contact
+          = link_to 'Contact', contact_new_path
         %li.divider-vertical
         %li
           = link_to 'Members\' Database', home_members_path
