Updated views to add footer and remove 'Author: '

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,6 @@
       = yield
     :javascript
       Shadowbox.init();
+    .footer
+    .container-fluid
+      %p <sub>Copyright 2013 - <a href="http://doctor.rpatel.co.uk" target="_blank">Dr Rashmi Patel</a></sub>
