--- a/app/views/home/news.html.haml
+++ b/app/views/home/news.html.haml
@@ -6,4 +6,4 @@
       %h3= newsitem.title
       %h4= newsitem.date.to_s :oems_standard
       %p=raw newsitem.content
-      %h6 Author: #{[newsitem.committee.title, newsitem.committee.firstname, newsitem.committee.surname, newsitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
+      %h6 #{[newsitem.committee.title, newsitem.committee.firstname, newsitem.committee.surname, newsitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
