--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,5 +13,5 @@
     :javascript
       Shadowbox.init();
     .footer
-    .container-fluid
-      %p <sub>Copyright 2013 - <a href="http://doctor.rpatel.co.uk" target="_blank">Dr Rashmi Patel</a></sub>
+      .container-fluid
+        %p{:align => "center"} <sub>Copyright 2013 - <a href="http://doctor.rpatel.co.uk" target="_blank">Dr Rashmi Patel</a></sub>
