update views with customhtml

--- a/app/views/home/eton.html.haml
+++ b/app/views/home/eton.html.haml
@@ -6,4 +6,5 @@
       %h3= etonmedical.title
       %h4= etonmedical.date.to_s :oems_standard
       %h5 Venue: #{etonmedical.venue}
+      %p=raw etonmedical.customhtml
       %p=raw etonmedical.content
