--- a/app/views/home/events.html.haml
+++ b/app/views/home/events.html.haml
@@ -6,4 +6,5 @@
       %h3= eventitem.title
       %h4= eventitem.date.to_s :oems_standard
       %h5 Venue: #{eventitem.venue}
+      %p=raw eventitem.customhtml
       %p=raw eventitem.content
