converted to Eton Blue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,10 +22,20 @@
     max-width: 950px;
 }
 
-a:link {color:#0088CC;}
-a:hover, a:focus { 
+p a:link {color:#0088CC;}
+p a:hover, a:focus { 
 color: #0088CC;
 text-decoration: underline;
+}
+
+.navbar .brand {
+  padding: 8px 20px 12px;
+  font-size: 20px;
+  color: #96c8a2;
+}
+
+.navbar .nav > .li > a:hover, .navbar .nav > li > a:focus {
+  color: #96c8a2;
 }
 
 .thumb {
@@ -35,7 +45,7 @@ text-decoration: underline;
 }
 
 .oemsevent, .oemsnews {
-    border-bottom: 3px solid #c1dbf1;
+    border-bottom: 3px solid #96c8a2;
     padding-bottom: 15px;
 }
 
