Navbar link to tripartite

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -25,4 +25,4 @@
           = link_to 'Contact', contact_new_path
         %li.divider-vertical
         %li
-          = link_to 'Members\' Database', home_members_path
+          %a{href: "http://www.tripartite.org.uk", target: "_blank"} Members
