--- a/app/views/home/_carousel.html.haml
+++ b/app/views/home/_carousel.html.haml
@@ -1,4 +1,4 @@
-#myCarousel.carousel.slide
+#myCarousel.carousel.slide{"data-interval" => "false"}
   %ol.carousel-indicators
     - images.each_with_index do |image, index|
       - if index == 0
@@ -8,8 +8,14 @@
   .carousel-inner
     - images.each_with_index do |image, index|
       - if index == 0
-        .active.item= image_tag image.thumblink
+        .active.item
+          =image_tag image.thumblink
+          .carousel-caption
+            %p= image.caption
       - else
-        .item= image_tag image.thumblink
+        .item
+          =image_tag image.thumblink
+          .carousel-caption
+            %p= image.caption
   %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel"} ‹
   %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel"} ›
