--- a/app/views/home/news.html.haml
+++ b/app/views/home/news.html.haml
@@ -7,6 +7,6 @@
       %h4= newsitem.date.to_s :oems_standard
       - unless newsitem.newsitemimgs.empty?
         = render partial: 'carousel', locals: { :images => newsitem.newsitemimgs }
-      / # %p=raw newsitem.customhtml
+      %p=raw newsitem.customhtml
       %p=raw newsitem.content
       %h6 #{[newsitem.committee.title, newsitem.committee.firstname, newsitem.committee.surname, newsitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
