--- a/app/views/etonmedical/index.html.haml
+++ b/app/views/etonmedical/index.html.haml
@@ -7,6 +7,6 @@
       %h4= etonmedical.date.to_s :oems_standard
       %h5 Venue: #{etonmedical.venue}
       - unless etonmedical.etonmedicalimgs.empty?
-        = render partial: 'carousel', locals: { :images => etonmedical.etonmedicalimgs }
+        = render partial: 'layouts/carousel', locals: { :images => etonmedical.etonmedicalimgs }
       %p=raw etonmedical.customhtml
       %p=raw etonmedical.content
