--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %title The Old Etonian Medical Society
+    = content_for :head
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
