--- a/app/views/eventitem/index.html.haml
+++ b/app/views/eventitem/index.html.haml
@@ -10,6 +10,6 @@
         %h4= eventitem.date.to_s :oems_standard
         %h5 Venue: #{eventitem.venue}
         - unless eventitem.eventitemimgs.empty?
-          = render partial: 'layouts/carousel', locals: { :images => eventitem.eventitemimgs }
+          = render partial: 'layouts/carousel', locals: { :images => eventitem.eventitemimgs, :id => eventitem.id }
         %p=raw eventitem.customhtml
         %p=raw eventitem.content
