--- a/app/views/layouts/_carousel.html.haml
+++ b/app/views/layouts/_carousel.html.haml
@@ -1,10 +1,10 @@
-.carousel.slide{:id => "myCarousel", "data-interval" => "false"}
+.carousel.slide{:id => "myCarousel_#{id}", "data-interval" => "false"}
   %ol.carousel-indicators
     - images.each_with_index do |image, index|
       - if index == 0
-        %li.active{"data-slide-to" => index, "data-target" => "#myCarousel"}
+        %li.active{"data-slide-to" => index, "data-target" => "#myCarousel_#{id}"}
       - else
-        %li{"data-slide-to" => index, "data-target" => "#myCarousel"}
+        %li{"data-slide-to" => index, "data-target" => "#myCarousel_#{id}"}
   .carousel-inner
     - images.each_with_index do |image, index|
       - if index == 0
@@ -21,5 +21,5 @@
             %p
               %a{href: image.imglink, target: "_blank"}
                 = image.caption
-  %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel"} ‹
-  %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel"} ›
+  %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel_#{id}"} ‹
+  %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel_#{id}"} ›
