--- a/app/views/newsitem/index.html.haml
+++ b/app/views/newsitem/index.html.haml
@@ -9,7 +9,7 @@
         %h3= newsitem.title
         %h4= newsitem.date.to_s :oems_standard
         - unless newsitem.newsitemimgs.empty?
-          = render partial: 'layouts/carousel', locals: { :images => newsitem.newsitemimgs }
+          = render partial: 'layouts/carousel', locals: { :images => newsitem.newsitemimgs, :id => newsitem.id }
         %p=raw newsitem.customhtml
         %p=raw newsitem.content
         %h6 #{[newsitem.committee.title, newsitem.committee.firstname, newsitem.committee.surname, newsitem.committee.position].to_sentence(:words_connector => " ", :last_word_connector => ", ")}
